completed Groovy Groceries wireframe iteration section, and learning/improvements section

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -302,8 +302,8 @@
         <div class="ihf_strip_right">
           <h4>Grocery Shopping</h4>
           <p>
-            The shopping flow leads students to look through stores where they can purchase items from using their student card or credit card. 
-            As per student need, there are in-store pickup or delivery options.
+            Students can browse through various stores to purchase item using their student card or credit card.
+            Based on student need, there are in-store pickup or delivery options.
           </p>
         </div>
       </section>
@@ -365,6 +365,117 @@
           </p>
         </div>
       </section>
+    </section>
+
+    <!-- Reiteration of Initial High-fi Wireframes -->
+    <section class="reiteration_highfi">
+      <h4>
+        Reiteration of High-fidelity Wireframes
+      </h4>
+      <p>
+        From these high-fidelity wireframes, I decided to reiterate three main flows: 
+        shopping, meal planning, and budgeting.
+      </p>
+      <p>
+        In my initial high-fidelity wireframes, many of my colour and font usage were not organized due to lacking an organized design hierarchy.
+
+        For the new iteration of the three different flows, I simplified down our colour pallet from multiple greens to just an accent green colour for 
+        our action elements, and a simple grey for our dominant colour. I also reconsidered our fonts, and simplified the typography ramp down to a single font with varying weights/sizes depending on text hierarchy.
+      </p>
+      <p>
+        I also reiterated on the experience flow and component elements to further improve cohesion and user-experience.
+      </p>
+      
+      <div class="font_and_colour_main_div">
+        <div class="font_and_colour_left_div">
+          <img class="colour_pallet" src="./groovyimages/Design Font + Colour/Colour Palette.png" alt="Groovy Groceries Colour Pallet">
+        </div>
+        <div class="font_and_colour_right_div">
+          <img class="font_ramp" src="./groovyimages/Design Font + Colour/Typography Ramp.png" alt="Groovy Groceries Typography Ramp">
+        </div>
+      </div>
+
+      <!-- Reiterate: Shopping -->
+      <section class="ihf_strip">
+        <div class="ihf_strip_left">
+          <img class="ihf_strip_img" src="./groovyimages/New Flows GIF/FinalNewFlowsGIF/ShoppingV2GIF.gif" alt="Groovy Groceries Reiterating High-fidelity Prototype Flow">
+        </div>
+
+        <div class="ihf_strip_right">
+          <h4>Grocery Shopping</h4>
+          <p>
+            For the new shopping flow, the accent green colour is now placed specifically on call-to-action elements. Now users can more
+            efficiently and distinctly tell where those elements are simply from a quick glance at the screen. <br><br>
+
+            For the grocery item page ("Apple" screen) and the My Cart page, I brought more attention to the primary buttons and elements on the screen through
+            making each of the screen background colour be the primary grey as opposed to the harsh white used in the past. I also added tabs
+            for listing ingredients and nutritional information when viewing a specific grocery item. Additionally, for the My Cart screen I enlarged 
+            the Pickup and Delivery buttons for greater visibility.
+          </p>
+        </div>
+      </section>
+
+      <!-- Reiterate: Meal Planning -->
+      <section class="ihf_strip">
+        <div class="ihf_strip_left">
+          <img class="ihf_strip_img" src="./groovyimages/New Flows GIF/FinalNewFlowsGIF/CalendarV2GIF.gif" alt="Groovy Groceries Reiterating High-fidelity Prototype Flow">
+        </div>
+
+        <div class="ihf_strip_right">
+          <h4>Meal Planning</h4>
+          <p>
+            For the new Meal Planning flow, each day of the week is now accessible through selection buttons at the top of the screen, as opposed to students needing to scroll to access each day in the previous design iteration. 
+            Now students can quickly navigate between days and weeks from the top of the screen. <br><br>
+ 
+            I made the background our primary grey to visually bring out the meal card elements more. 
+            I also placed our main "add a plan" button more prominently at the bottom right of the screen for students to access that easily. 
+            Since our weekly & daily plans can be accessed at the top of the screen, the calendar button that used to be next to the "add a plan" button can be removed completely.
+          </p>
+        </div>
+      </section>
+
+      <!-- Reiterate: Budgeting -->
+      <section class="ihf_strip">
+        <div class="ihf_strip_left">
+          <img class="ihf_strip_img" src="./groovyimages/New Flows GIF/FinalNewFlowsGIF/BudgetV2GIF.gif" alt="Groovy Groceries Reiterating High-fidelity Prototype Flow">
+        </div>
+
+        <div class="ihf_strip_right">
+          <h4>Budgeting</h4>
+          <p>
+            For this new iteration of the budgeting flow, I redesigned the weekly spending display to be a visual circle as opposed to the previous design's pie-chart so that users can now
+            quickly understand their weekly spendings with a simple glance. <br><br>
+
+            I also redesigned the Weekly Activities bar graph to show the exact amount of dollars spent per category, as opposed to the older design's percentage measurement. 
+            Dollar amount brings more clarity and a concrete understanding to a user's money spending. <br><br>
+
+            I added a new "Detailed Transactions" screen to the budgeting flow to allow users a greater understanding of their monthly spending, and to give a clear list of their 
+            past transactions. This was not in the prior design iteration, but is quite a necessary addition to a student's budgeting experience.
+          </p>
+        </div>
+      </section>
+    </section>
+
+    <!-- Learnings and Improvements -->
+    <section class="learnings_and_improvements">
+      <h4>
+        What I Learned
+      </h4>
+      <p>
+        Grocery purchases, planning, and budgeting can vary diversely between our users. I aimed to create a solution to allow our users the 
+        flexibility and efficiency of addressing their particular need, whether that be all experiences this product has to offer or portions of it. 
+        Through iterating on specific flows of our solution multiple times, this greatly allowed me to further think through our users' experiences 
+        within that particular aspect of our overall solution.
+      </p>
+
+      <h4>
+        Future Improvements
+      </h4>
+      <p>
+        In the future I would want to achieve a majority of our respondents to be university students within our research, 
+        and to incorporate more user interviews within a design cycle. Through doing so, we could gather more feedback on our
+        design and iterate further on those reviews.
+      </p>
     </section>
 
     <!-- CASE STUDY END! -->
