starting to work on noteable case study material

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -78,7 +78,7 @@
 
         <h4>Team:</h4>
         <p>
-          Emily Song
+          Emily Song (UX Designer)
         </p>
       </div>
     </section>
