--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -1,1 +1,128 @@
-<p> noteable case study | WIP </p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!--CSS Styles -->
+    <link rel="stylesheet" href="./noteablecss/styles.css" />
+
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./noteableicons/"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./noteableicons/tabIcon.png"
+    />
+
+    <title> Ann C. Tseng </title>
+  </head>
+
+  <body>
+    <!-- Navbar -->
+    <nav>
+        <h1> Ann C. Tseng </h1>
+        <ul class="navigation">
+            <li><a href="../../../index.html" class="nav-link">About</a></li>
+            <li><a href="../../../index.html#work" class="nav-link">Work</a></li>
+            <li><a href="https://drive.google.com/file/d/1blJUr8r6f8caPdDlw1iQXtjr6N1z9QSM/view?usp=sharing" target="_blank" class="nav-link">Resume</a></li>
+        </ul>
+        <button class="burger-menu" id="burger-menu">
+            <ion-icon class="bars" name="menu-outline"></ion-icon>
+        </button>
+    </nav>
+
+    <!-- CASE STUDY BEGIN: -->
+    <!-- Banner -->
+    <section class="banner">
+      <img
+        src="./noteableimages/Banner/Banner Testing.png"
+        alt="Noteable Banner Photo"
+        loading="lazy"
+        class="banner-img"
+      />
+    </section>
+
+    <!-- Intro Section -->
+    <section class="intro">
+      <div class="intro_left">
+        <h2 class="intro-title"> Noteable </h2>
+        <p class="intro-topic_time"> 
+          UX Design | July-October 2021
+        </p>
+        <p class="intro-topic_time"> 
+            Noteable is a web app that improves dense reading experiences by 
+            allowing users to easily take quick notes, as well as auto generate summaries given a long paragraph.
+        </p>
+      </div>
+
+      <div class="intro_right">
+        <h4>My Role: UX Designer</h4>
+        <p>
+            Ideation sessions with client, information architecture, low-fi and high-fi wireframe, prototype design​
+        </p>
+
+        <h4>Tools:</h4>
+        <p>
+          Figma and Miro
+        </p>
+
+        <h4>Team:</h4>
+        <p>
+            Emily Song (UX Designer) and Shikha Kandpal (Project Manager)
+        </p>
+      </div>
+    </section>
+
+    <section class="design_question">
+      <hr>
+      <h4>Design Question</h4>
+      <p>
+        How might we improve people's reading experiences of dense texts?
+      </p>
+      <hr>
+    </section>
+
+   
+
+    <!-- CASE STUDY END! -->
+
+    <!-- Scroll to top -->
+    <i class="scroll-up" id="scroll-up"
+    ><img
+      src="./noteableicons/uparrow.png"
+      class="socicon up-arrow"
+      alt="scroll-up"
+    /></i>
+
+    <!-- Footer section -->
+    <footer>
+        <p class="copy">&copy; Copyright 2022</p>
+        <p class="copy">
+          Made with &#x2661; by
+          <a href="https://www.linkedin.com/in/annct/" target="_blank"
+            >Ann C. Tseng</a
+          >
+        </p>
+  </footer>
+
+    <!-- Website scripts -->
+    <script src="./noteablejs/app.js"></script>
+
+    <!-- Ion icons scripts -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
+</html>
