worked on noteable banner, intro, and  empathy map

--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -89,6 +89,57 @@
       <hr>
     </section>
 
+    <section class="ideation_empathymap_painpoints_informationarchitecture">
+        <!--Ideation-->
+        <section>
+            <h4>Ideation</h4>
+            <p>
+                Speaking with our client, we ideated several main functionalities to help us visualize what will be required for Noteable.
+                The following is what we came up with : 
+            </p>
+            <div class="Row">
+                <div class="Column">
+                  Onboarding
+                </div>
+                <div class="Column">
+                  PDF Viewer
+                </div>
+            </div>
+            <div class="Row">
+                <div class="Column">
+                    Note-taking and Annotation
+                  </div>
+                <div class="Column">
+                    Text Summarizer
+                </div>
+            </div>
+            
+            <br><br>
+            <p>
+                The client had their own initial design of the product going into ideation but they wanted a complete redesign. 
+                The following is what they've shown as an initial concept:
+            </p>
+            <div class="client_initial_design">
+                    <img class="client_initial_design_img" src="./noteableimages/client_onboardingdesign.png" alt="Upload PDF Wireframe Client's Initial Design">
+                    <img class="client_initial_design_img" src="./noteableimages/client_notetakingdesign.png" alt="Note-taking Annotation Wireframe Client's Initial Design">
+                    <img class=client_initial_design_img" src="./noteableimages/client_summarizedesign.png" alt="Summarizer Wireframe Client's Initial Design">
+            </div>
+        </section>
+
+        <!-- Empathy Map -->
+        <section class="empathy_map_section">
+            <h4>Empathy Map</h4>
+            <p>
+                I made an empathy map to better understand how our users may say, feeling, think, and want when faced with a large reading of text. 
+                I imagine putting myself into that situation and how I may also feel.
+            </p>
+            <img class="empathy_map" src="./noteableimages/Noteable - Empathy Map.jpg" alt="An empathy map for Noteable">
+        </section>
+
+    </section>
+
+    
+
    
 
     <!-- CASE STUDY END! -->
