working on Noteable Case Study writeup and updated resume link

--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -31,7 +31,7 @@
         <ul class="navigation">
             <li><a href="../../../index.html" class="nav-link">About</a></li>
             <li><a href="../../../index.html#work" class="nav-link">Work</a></li>
-            <li><a href="https://drive.google.com/file/d/1blJUr8r6f8caPdDlw1iQXtjr6N1z9QSM/view?usp=sharing" target="_blank" class="nav-link">Resume</a></li>
+            <li><a href="https://drive.google.com/file/d/1WN7j-C2qAl1S9T10XnTLLyEKrbmHjO0c/view?usp=sharing" target="_blank" class="nav-link">Resume</a></li>
         </ul>
         <button class="burger-menu" id="burger-menu">
             <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -136,12 +136,114 @@
             <img class="empathy_map" src="./noteableimages/Noteable - Empathy Map.jpg" alt="An empathy map for Noteable">
         </section>
 
+        <!-- Pain Points -->
+        <section class="pain_points_section">
+          <h4>Pain Points</h4>
+          <p>
+              Using the empathy map, I then identified a few pain points that users may experience when trying to read dense texts.
+          </p>
+          <img class="pain_points" src="./noteableimages/Noteable - Pain Points.jpg" alt="A few pain points for Noteable">
+        </section>
+
+        <!-- Information Architecture -->
+        <section class="info_architecture">
+            <h4>Information Architecture</h4>
+            <p>
+                To visualize how user flows may be through Noteable, I created an information architecture to map out where each screen would be located within the full user experience.
+            </p>
+            <img class="info_arch" src="./noteableimages/Noteable - Information Architecture.jpg" alt="An information architecture for Noteable">
+        </section>
     </section>
 
-    
+    <section class="wireframes_section">
+      <section class="lowfi">
+        <h4>
+          Low-fidelity Wireframes
+        </h4>
+        <p>
+          Based on the information architecture, I then made a few low-fidelity wireframes to see how design elements can be placed within each main screen of Noteable.
+        </p>
+        <div class="Row_wf">
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Lowfi wireframes/1.png" src="Noteable's lowfi wireframes">
+          </div>
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Lowfi wireframes/2.png" src="Noteable's lowfi wireframes">
+          </div>
+        </div>
+        <div class="Row">
+            <div class="Column_wf">
+              <img class="wf_img" src="./noteableimages/Lowfi wireframes/3.png" src="Noteable's lowfi wireframes">
+            </div>
+            <div class="Column_wf">
+              <img class="wf_img" src="./noteableimages/Lowfi wireframes/4.png" src="Noteable's lowfi wireframes">
+            </div>
+        </div>
+        <div class="Row">
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Lowfi wireframes/5.png" src="Noteable's lowfi wireframes">
+          </div>
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Lowfi wireframes/6.png" src="Noteable's lowfi wireframes">
+          </div>
+        </div>  
+      </section>
 
-   
+      <section class="highfi">
+        <h4>
+          High-fidelity Wireframes
+        </h4>
+        <p>
+          After the low-fidelity wireframes, I had several iteration sessions to create the final high-fidelity wireframes.
+        </p>
+        <div class="Row_wf">
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Highfi wireframes/1. Landing page.png" src="Noteable's highfi wireframes">
+          </div>
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Highfi wireframes/2. Sign Up.png" src="Noteable's highfi wireframes">
+          </div>
+        </div>
+        <div class="Row">
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Highfi wireframes/3. Log In.png" src="Noteable's highfi wireframes">
+          </div>
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Highfi wireframes/4. Verify email.png" src="Noteable's highfi wireframes">
+          </div>
+        </div>
+        <div class="Row_wf">
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Highfi wireframes/5. Home _ Upload (SIGNED-IN).png" src="Noteable's highfi wireframes">
+          </div>
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Highfi wireframes/6. My Notes.png" src="Noteable's highfi wireframes">
+          </div>
+        </div>
+        <div class="Row_wf">
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Highfi wireframes/7. Summarize (BEFORE).png" src="Noteable's highfi wireframes">
+          </div>
+          <div class="Column_wf">
+            <img class="wf_img" src="./noteableimages/Highfi wireframes/8. Summarize (AFTER).png" src="Noteable's highfi wireframes">
+          </div>
+        </div>
+      </section>
+    </section>
 
+    <section class="final_section">
+      <section class="key_features">
+        <h4>
+          Final Solution & Key Features
+        </h4>
+      </section>
+
+      <section class="conclusion">
+        <h4>
+          Learnings and Conclusions
+        </h4>
+      </section>
+    </section>
     <!-- CASE STUDY END! -->
 
     <!-- Scroll to top -->
