added wireframe sections, key features, and final conclusions to Noteable

--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -235,13 +235,35 @@
       <section class="key_features">
         <h4>
           Final Solution & Key Features
-        </h4>
+        </h4><br><br>
+
+        <p style="text-align: center;">Sign-up | Users can create an account</p> 
+        <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/1.Noteable-SignUpGIF.gif" alt="Noteable Final Key Features GIF">
+
+        <p style="text-align: center; margin-top: 2rem;">Log-in and File Selection | Users can access their account and past files</p> 
+        <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/2.Noteable-LoginGIF.gif" alt="Noteable Final Key Features GIF">
+
+        <p style="text-align: center; margin-top: 2rem;"> Annotation | Users can take notes and annotate PDF files</p> 
+        <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/3.Noteable-NotesGIF.gif" alt="Noteable Final Key Features GIF">
+
+        <p style="text-align: center; margin-top: 2rem;"> Summarization | Users can generate AI summaries of PDF pages, and edit summaries as needed</p>
+        <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/4.Noteable-SummarizeGIF.gif" alt="Noteable Final Key Features GIF">
+
+        <p style="text-align: center; margin-top: 2rem;"> Multi-file Selection | Users can access past files and select new texts to work with</p>
+        <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/5.Noteable-NewPDFGIF.gif" alt="Noteable Final Key Features GIF">
       </section>
 
       <section class="conclusion">
         <h4>
           Learnings and Conclusions
         </h4>
+        <p>
+          This project was the first time I had an opportunity to go through a full design process with a client specifying their needs throughout the experience. 
+          I learned that getting a client's input on the design as well as adjusting our product to better reflect their needs is critical to a solution's success.
+          <br><br>
+          In addition, a client may understand what they want but not necessarily how to move towards that goal, so it was very rewarding to work 
+          with them to find out how a solution can meet their needs.
+        </p>
       </section>
     </section>
     <!-- CASE STUDY END! -->
