corrected text format in team writeup

--- a/assets/projectPages/accessibilityAssets/accessibility.html
+++ b/assets/projectPages/accessibilityAssets/accessibility.html
@@ -87,7 +87,7 @@
         <h4>Team:</h4>
         <p>
             Professor(s): Stephanie Ludi (University of North Texas), Yudong Liu (WWU), and Yasmine Elglaly (WWU) <br><br>
-            Research colleagues(s): Chia-En "Ann" Tseng (myself), Seoung Ho "Sam" Jung
+            Research colleague(s): Chia-En "Ann" Tseng (myself), Seoung Ho "Sam" Jung
         </p>
       </div>
     </section>
