--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -54,7 +54,7 @@
       <div class="intro_left">
         <h2 class="intro-title"> Groovy Groceries </h2>
         <p class="intro-topic_time"> 
-          UX Design & Research | Aug. 2021-Aug. 2022 
+          UX Design & Research | Aug 2021-October 2021, April 2022-Aug 2022 (revisit + final iteration)
         </p>
         <p class="intro-topic_time"> 
           Groovy Groceries is a university grocery app that helps college students 
