update groovy case study writeup + front page View buttons

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -134,7 +134,7 @@
 
       <!-- Justify method and show affinity diagram -->
       <p style="margin-top:3rem">
-        Even though there are limitations with our method of choice, there were still valuable data gathered from the responses.
+        Even though there are limitations with the data we gathered, there are still valuable responses we wanted to consider.
         So, in order to observe patterns more succinctly, I created an Affinity Diagram
         to organize and consolidate commonalities and differences between responses.
       </p>
@@ -204,7 +204,7 @@
       <img class="low_fidelity_wireframes" src="./groovyimages/Lowfi Wireframes.png" alt="Groovy Groceries Low Fidelity Wireframes">
     </section>
 
-    <!-- First Iteration of High Fidelity Wireframes -->
+    First Iteration of High Fidelity Wireframes
     <section class="first_highfi">
       <h4 class="first_highfi_title">
         Initial Iteration High-fidelity Wireframes
@@ -269,16 +269,16 @@
     </section>
 
     <!-- Initial Highfi GIF Key Features Section -->
-    <section class="initial_highfi_features_section">
+    <!-- <section class="initial_highfi_features_section">
       <h4>
         Initial High-fidelity Key Features
       </h4>
       <p>
         I then created prototype flows of Groovy Groceries' key features to more indepthly explore the experiences users can have within the product.
-      </p>
+      </p> -->
 
       <!-- Onboarding -->
-      <section class="ihf_strip">
+      <!-- <section class="ihf_strip">
         <div class="ihf_strip_left">
           <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-SignUp.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
         </div>
@@ -291,10 +291,10 @@
             adjustible budgeting goal.
           </p>
         </div>
-      </section>
+      </section> -->
 
       <!-- Shop -->
-      <section class="ihf_strip">
+      <!-- <section class="ihf_strip">
         <div class="ihf_strip_left">
           <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Shop.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
         </div>
@@ -306,10 +306,10 @@
             Based on student need, there are in-store pickup or delivery options.
           </p>
         </div>
-      </section>
+      </section> -->
 
       <!-- Budget -->
-      <section class="ihf_strip">
+      <!-- <section class="ihf_strip">
         <div class="ihf_strip_left">
           <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Budget.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
         </div>
@@ -321,10 +321,10 @@
             Information on their last transaction, weekly spending, and spending categories are also available.
           </p>
         </div>
-      </section>
+      </section> -->
 
       <!-- Meal Plan -->
-      <section class="ihf_strip">
+      <!-- <section class="ihf_strip">
         <div class="ihf_strip_left">
           <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Plan.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
         </div>
@@ -335,10 +335,10 @@
             Students can set up and view weekly meal plan info such as date, meal type (breakfast, lunch, dinner), name, and any planning notes.
           </p>
         </div>
-      </section>
+      </section> -->
 
       <!-- Order History -->
-      <section class="ihf_strip">
+      <!-- <section class="ihf_strip">
         <div class="ihf_strip_left">
           <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Orders.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
         </div>
@@ -350,10 +350,10 @@
             The app will show pending or completed orders & track delivery/pickup status for all orders.
           </p>
         </div>
-      </section>
+      </section> -->
 
       <!-- Student Profile -->
-      <section class="ihf_strip">
+      <!-- <section class="ihf_strip">
         <div class="ihf_strip_left">
           <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Profile.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
         </div>
@@ -365,25 +365,24 @@
           </p>
         </div>
       </section>
-    </section>
+    </section> -->
 
     <!-- Reiteration of Initial High-fi Wireframes -->
     <section class="reiteration_highfi">
       <h4>
-        Reiteration of High-fidelity Wireframes
+        Revision of High-fidelity Wireframes
       </h4>
       <p>
-        From these high-fidelity wireframes, I decided to reiterate three main flows: 
-        shopping, meal planning, and budgeting.
+        From the above high-fidelity wireframes, I decided to iterate on three main flows: 
+        shopping, meal planning, and budgeting. 
       </p>
       <p>
-        In my initial high-fidelity wireframes, many of my colour and font usage were not organized due to lacking an organized design hierarchy.
+        In my initial high-fidelity wireframes, many of my colour and font usage were not organized due to lacking a succinct design hierarchy.
 
-        For the new iteration of the three different flows, I simplified down our colour pallet from multiple greens to just an accent green colour for 
-        our action elements, and a simple grey for our dominant colour. I also reconsidered our fonts, and simplified the typography ramp down to a single font with varying weights/sizes depending on text hierarchy.
+        For the new iteration of the shopping, meal planning, and budgeting flows, I simplified down our palette to two colours. I also reconsidered our fonts, and created a typography ramp with varying text hierarchy.
       </p>
       <p>
-        I also reiterated on the experience flow and component elements to further improve cohesion and user-experience.
+        Additionally, I reiterated the user-flow and aspects of UI elements to further improve the experience and the product's visual cohesion.
       </p>
       
       <div class="font_and_colour_main_div">
@@ -396,7 +395,7 @@
       </div>
 
       <!-- Reiterate: Shopping -->
-      <section class="ihf_strip">
+      <section class="ihf_strip" style="background-color: blue;">
         <div class="ihf_strip_left">
           <img class="ihf_strip_img" src="./groovyimages/New Flows GIF/FinalNewFlowsGIF/ShoppingV2GIF.gif" alt="Groovy Groceries Reiterating High-fidelity Prototype Flow">
         </div>
