removed writeup redundancy in groovy groceries case study

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -379,7 +379,7 @@
       <p>
         In my initial high-fidelity wireframes, many of my colour and font usage were not organized due to lacking a succinct design hierarchy.
 
-        For the new iteration of the shopping, meal planning, and budgeting flows, I simplified down our palette to two colours. I also reconsidered our fonts, and created a typography ramp with varying text hierarchy.
+        For the new iteration of the shopping, meal planning, and budgeting flows, I simplified down our palette to two colours. I reconsidered our fonts, and created a typography ramp with varying text hierarchy.
       </p>
       <p>
         Additionally, I reiterated the user-flow and aspects of UI elements to further improve the experience and the product's visual cohesion.
@@ -407,7 +407,7 @@
             efficiently and distinctly tell where those elements are simply from a quick glance at the screen. <br><br>
 
             For the grocery item page ("Apple" screen) and the My Cart page, I brought more attention to the primary buttons and elements on the screen through
-            making each of the screen background colour be the primary grey as opposed to the harsh white used in the past. I also added tabs
+            making each of the screen background colour be the primary grey as opposed to the harsh white used in the past. I added tabs
             for listing ingredients and nutritional information when viewing a specific grocery item. Additionally, for the My Cart screen I enlarged 
             the Pickup and Delivery buttons for greater visibility.
           </p>
@@ -427,7 +427,7 @@
             Now students can quickly navigate between days and weeks from the top of the screen. <br><br>
  
             I made the background our primary grey to visually bring out the meal card elements more. 
-            I also placed our main "add a plan" button more prominently at the bottom right of the screen for students to access that easily. 
+            I placed our main "add a plan" button more prominently at the bottom right of the screen for students to access that easily. 
             Since our weekly & daily plans can be accessed at the top of the screen, the calendar button that used to be next to the "add a plan" button can be removed completely.
           </p>
         </div>
@@ -445,7 +445,7 @@
             For this new iteration of the budgeting flow, I redesigned the weekly spending display to be a visual circle as opposed to the previous design's pie-chart so that users can now
             quickly understand their weekly spendings with a simple glance. <br><br>
 
-            I also redesigned the Weekly Activities bar graph to show the exact amount of dollars spent per category, as opposed to the older design's percentage measurement. 
+            I redesigned the Weekly Activities bar graph to show the exact amount of dollars spent per category, as opposed to the older design's percentage measurement. 
             Dollar amount brings more clarity and a concrete understanding to a user's money spending. <br><br>
 
             I added a new "Detailed Transactions" screen to the budgeting flow to allow users a greater understanding of their monthly spending, and to give a clear list of their 
