update IA section of Groovy

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -190,6 +190,7 @@
       </h4>
       <p class="information_architecture_p">
         I then created an information architecture of our product's layout in order to map out how users will be navigating from one experience flow to another.
+        This gave me an efficient and clear way of seeing the major tasks a user can accomplish within Groovy Groceries, and how users may navigate to find information needed.
       </p>
       <img class="information_architecture" src="./groovyimages/Information Architecture.png" alt="Groovy Groceries Information Architecture">
 
