commenting sections for clarity

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -205,7 +205,7 @@
       <img class="low_fidelity_wireframes" src="./groovyimages/Lowfi Wireframes.png" alt="Groovy Groceries Low Fidelity Wireframes">
     </section>
 
-    First Iteration of High Fidelity Wireframes
+    <!-- First Iteration of High Fidelity Wireframes -->
     <section class="first_highfi">
       <h4 class="first_highfi_title">
         Initial Iteration High-fidelity Wireframes
