update initial highfi wireframes section

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -208,10 +208,11 @@
     <!-- First Iteration of High Fidelity Wireframes -->
     <section class="first_highfi">
       <h4 class="first_highfi_title">
-        Initial Iteration High-fidelity Wireframes
+        Initial High-fidelity Wireframes
       </h4>
       <p class="highfi_p">
-        From the low-fidelity wireframes, I created the first iteration of high-fidelity wireframes for the product's main screens.
+        From the low-fidelity wireframes, I created the first iteration of high-fidelity wireframes. Here I wanted to represent what the finalized
+        product can look like, and detailing the user interface and user-flow beyond low-fidelity.
       </p>
 
       <div class="initial_highfi_row">
