update writeup for groovy in revisison section

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -375,8 +375,8 @@
         Revision of High-fidelity Wireframes
       </h4>
       <p>
-        From the above high-fidelity wireframes, I decided to iterate on three main flows: 
-        shopping, meal planning, and budgeting. 
+        After taking a couple weeks of personal UX study, speaking with UX mentors, and rethinking my Groovy Groceries design, I came back to reiterate on three main flows: 
+        shopping, meal planning, and budgeting.
       </p>
       <p>
         In my initial high-fidelity wireframes, many of my colour and font usage were not organized due to lacking a succinct design hierarchy.
