working on revision for highfi section

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -381,10 +381,10 @@
       <p>
         In my initial high-fidelity wireframes, many of my colour and font usage were not organized due to lacking a succinct design hierarchy.
 
-        For the new iteration of the shopping, meal planning, and budgeting flows, I simplified down our palette to two colours. I reconsidered our fonts, and created a typography ramp with varying text hierarchy.
+        For the new iteration of the shopping, meal planning, and budgeting flows, I simplified down our palette to two colours, reconsidered font usage, and created a consistent simple typography ramp.
       </p>
       <p>
-        Additionally, I reiterated the user-flow and aspects of UI elements to further improve the experience and the product's visual cohesion.
+        Additionally, I reiterated the user-flow and aspects of UI elements to improve upon user experience and visual cohesion.
       </p>
       
       <div class="font_and_colour_main_div">
