updated tab titles

--- a/assets/projectPages/accessibilityAssets/accessibility.html
+++ b/assets/projectPages/accessibilityAssets/accessibility.html
@@ -21,7 +21,7 @@
       href="./accessibilityicons/"
     />
 
-    <title> Ann C. Tseng </title>
+    <title> Ann C. Tseng | Accessibility and AI </title>
   </head>
 
   <body>
