--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -21,7 +21,7 @@
       href="./groovyicons/tabIcon.png"
     />
 
-    <title> Ann C. Tseng </title>
+    <title> Ann C. Tseng | Groovy Groceries </title>
   </head>
 
   <body>
