--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -21,7 +21,7 @@
       href="./noteableicons/tabIcon.png"
     />
 
-    <title> Ann C. Tseng </title>
+    <title> Ann C. Tseng | Noteable </title>
   </head>
 
   <body>
