--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="assets/icons/tabIcon.png"
     />
 
-    <title> Ann C. Tseng </title>
+    <title> Ann C. Tseng | Home </title>
   </head>
 
   <body>
