fixed formatting issues with conclusion section

--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -255,8 +255,9 @@
 
       <section class="conclusion">
         <h4>
-          Learnings and Conclusions
+          Lessons Learned
         </h4>
+        <br>
         <p>
           This project was the first time I had an opportunity to go through a full design process with a client specifying their needs throughout the experience. 
           I learned that getting a client's input on the design as well as adjusting our product to better reflect their needs is critical to a solution's success.
@@ -264,6 +265,9 @@
           In addition, a client may understand what they want but not necessarily how to move towards that goal, so it was very rewarding to work 
           with them to find out how a solution can meet their needs.
         </p>
+        <br>
+        <br>
+        <br>
       </section>
     </section>
     <!-- CASE STUDY END! -->
